# address-change-automation

./: .gitignore  RAILWAY_DEPLOY.md  README.md
automation/: .env.example  .env.production.example  .env.railway.example  DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  README.md  agents_mcp_detailed.html  deployment_plan.html  docker-compose.yml  project_documentation.html  pyproject.toml  render.yaml  requirements.txt  system_documentation.html  technical_analysis.html
automation/docker/postgres/: init.sql  migration_001.sql  migration_002_case_resolutions.sql  migration_003_analytics.sql  migration_004_users.sql  migration_005_case_assignment.sql
automation/frontend/: .env.production.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
automation/frontend/public/: admin-preview.html
automation/frontend/src/: App.css  App.jsx  index.css
automation/frontend/src/components/: AnalyticsDashboard.css  AnalyticsDashboard.jsx  CitizenManagement.css  CitizenManagement.jsx  EmployeeManagement.jsx  LanguageSelector.css  LanguageSelector.jsx  NeighborhoodMap.css  NeighborhoodMap.jsx  PDFViewer.jsx  SettingsPanel.css  SettingsPanel.jsx  TerminalWidget.css  TerminalWidget.jsx  UserManagement.css  UserManagement.jsx
automation/frontend/src/context/: AuthContext.jsx  LanguageContext.jsx
automation/frontend/src/pages/: AdminDashboard.css  Login.css  (+6 more)
automation/src/automation/: api.py  auth.py  chatbot_service.py  crew.py  db.py  document_validator.py  email_listener.py  email_service.py  log_manager.py  main.py  ocr_service.py
(+8 files in other folders)
